--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio progetti</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/index-style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="js/script.js" defer></script>
 </head>
@@ -19,23 +19,24 @@
 
         <div id="menu">
             <a href="index.html">Home</a>
-            <a href="s">Linguaggi</a>
-            <a href="s">Applicazioni</a>
+            <a href="">Java</a>
+            <a href="s">PHP</a>
+            <a href=".html">Python</a>
             <a href=".html">Su di me</a>
         </div>
     
         <div class="carousel">
             <picture class="active">
-                <source media="(min-width:1000px)" alt="languages" srcset="img/carousel/max1.PNG">
+                <source media="(min-width:1024px)" alt="languages" srcset="img/carousel/max1.PNG">
                 <img alt="languages" srcset="img/carousel/min1.PNG">
             </picture>
             <picture>
-                <source media="(min-width:1000px)" alt="languages" srcset="img/carousel/max2.PNG">
-                <img alt="languages" srcset="img/carousel/min2.PNG">
+                <source media="(min-width:1024px)" alt="technologies" srcset="img/carousel/max2.PNG">
+                <img alt="technologies" srcset="img/carousel/min2.PNG">
             </picture>
             <picture>
-                <source media="(min-width:1000px)" alt="languages" srcset="img/carousel/max3.PNG">
-                <img alt="languages" srcset="img/carousel/min3.PNG">
+                <source media="(min-width:1024px)" alt="principles and patterns" srcset="img/carousel/max3.PNG">
+                <img alt="principles and patterns" srcset="img/carousel/min3.PNG">
             </picture>
         </div>
 
