--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Portfolio Progetti
                 <h3>Java</h3>
             </div>
             <div>
-                <img src="/img/loghi/logoJava.png">
+                <img src="{{ baseurl }}/img/loghi/logoJava.png">
             </div>
             <p>
                 Raccolta di progetti Java suddivisi per tipologia di applicazione.
@@ -27,7 +27,7 @@ title: Portfolio Progetti
                 <h3>Php</h3>
             </div>
             <div>
-                <img src="/img/loghi/logoPhp.png">
+                <img src="{{ baseurl }}/img/loghi/logoPhp.png">
             </div>
             <p>
                 Raccolta di WebApp implementate in PHP sia nel front-end che nel back-end.
@@ -36,7 +36,7 @@ title: Portfolio Progetti
                 o seguendo uno schema OOP.
             </p>
             <div>
-                <a href="/templates/php.html">Vai alla sezione</a>
+                <a href="{{ baseurl }}/templates/php.html">Vai alla sezione</a>
             </div>
         </div>
 
@@ -45,7 +45,7 @@ title: Portfolio Progetti
                 <h3>Python</h3>
             </div>
             <div>
-                <img src="/img/loghi/logoPython.png">
+                <img src="{{ baseurl }}/img/loghi/logoPython.png">
             </div>
             <p>
                 Raccolta di progetti Python suddivisi per tipologia di applicazione.
@@ -68,7 +68,7 @@ title: Portfolio Progetti
                 <h3>Web Apps</h3>
             </div>
             <div class="img">
-                <img src="/img/loghi/webapp.png">
+                <img src="{{ baseurl }}/img/loghi/webapp.png">
             </div>
             <p>
                 Raccolta di tutti progetti web suddvisi per linguaggio 
@@ -87,7 +87,7 @@ title: Portfolio Progetti
                 <h3>GUI</h3>
             </div>
             <div class="img">
-                <img src="/img/loghi/gui.png">
+                <img src="{{ baseurl }}/img/loghi/gui.png">
             </div>
             <p>
                 Raccolta di tutti progetti implementati con interfacce 
@@ -105,7 +105,7 @@ title: Portfolio Progetti
                 <h3>Console</h3>
             </div>
             <div class="img">
-                <img src="/img/loghi/console.png">
+                <img src="{{ baseurl }}/img/loghi/console.png">
             </div>
             <p>
                 Raccolta di tutti progetti eseguibili via console.
