--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Portfolio Progetti
                 <h3>Java</h3>
             </div>
             <div>
-                <img src="{{ baseurl }}/img/loghi/logoJava.PNG" alt="logo Java">
+                <img src="{{ site.baseurl }}/img/loghi/logoJava.PNG" alt="logo Java">
             </div>
             <p>
                 Raccolta di progetti Java suddivisi per tipologia di applicazione.
