Updates yaml files

--- a/index.html
+++ b/index.html
@@ -1,31 +1,6 @@
 ---
 layout: index_base
 title: Portfolio Progetti
-cards:
-  - title: Java
-    image: ./img/loghi/logoJava.PNG
-    content: Raccolta di progetti Java suddivisi per tipologia di applicazione.
-            <br><br>
-            Le GUI utilizzano il framework Swing, mentre le WebApp sono implementate
-            con le Servlet oppure con il framework Spring Boot.
-    link: ./linguaggi/php.html
-    type: card
-  - title: Php
-    image: ./img/loghi/logoPhp.PNG
-    content: Raccolta di WebApp implementate in PHP sia nel front-end che nel back-end.
-            <br><br>
-            Sfruttando la versatilità del linguaggio sono state sviluppate in procedurale 
-            o seguendo uno schema OOP.
-    link: ./linguaggi/php.html
-    type: card
-  - title: Python
-    image: ./img/loghi/logoPython.PNG
-    content: Raccolta di progetti Python suddivisi per tipologia di applicazione.
-            <br><br>
-            I progetti GUI sono implementati utilizzando il framework Tkinter, 
-            mentre le WebApp utilizzano Flask.
-    link: ./linguaggi/python.html
-    type: card
 ---
 
 <div class="section">
@@ -112,7 +87,7 @@ cards:
 <div class="section">
     <h3>Linguaggi</h3>
     <div class="flexOr">
-        {% for card in page.cards %}
+        {% for card in site.data.index.cards %}
             {% 
                 include card_base.html 
                 title = card.title 
