Adds all python projects presentations

--- a/progetti/php/registro.html
+++ b/progetti/php/registro.html
@@ -1,6 +1,6 @@
 ---
 layout: project_base
-title: Registro
+title: Registro presenze
 link: https://github.com/EnMa85/PHP_projects/tree/main/registro_presenze
 ---
 
