--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ title: Portfolio Progetti
                     E' programmato in procedurale e utilizza il Composer per la gestione delle dipendenze.
                 </p>
                 <div>
-                    <a class="button" href="{{ site.baseurl }}/progetti/registro.html">Vai al progetto</a>
+                    <a class="button" href="{{ site.baseurl }}/progetti/php/registro.html">Vai al progetto</a>
                 </div>
             </div>
         </div>
