--- a/progetti/python/bancomat-console.html
+++ b/progetti/python/bancomat-console.html
@@ -57,8 +57,10 @@ link: https://github.com/EnMa85/Esercizi_Python/blob/main/es05_Bancomat
         </div>
         <div class="screen">
             <img class="screen-max" src="{{ site.baseurl }}/img/progetti/bancomat-console/bancomat8.PNG">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/bancomat-console/bancomat6.PNG">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/bancomat-console/bancomat5.PNG">
+            <span>
+                <img width="49%" src="{{ site.baseurl }}/img/progetti/bancomat-console/bancomat6.PNG">
+                <img width="49%" src="{{ site.baseurl }}/img/progetti/bancomat-console/bancomat5.PNG">
+            </span>
         </div>
     </div>
 </div>
