--- a/progetti/python/bancomat-tkinter.html
+++ b/progetti/python/bancomat-tkinter.html
@@ -1,6 +1,6 @@
 ---
 layout: project_base
-title: Bancomat GUI Tkinter
+title: Bancomat Tkinter
 link: https://github.com/EnMa85/Esercizi_Python/blob/main/es09_Tkinter_Bancomat_Grafico
 ---
 
@@ -15,8 +15,10 @@ link: https://github.com/EnMa85/Esercizi_Python/blob/main/es09_Tkinter_Bancomat_
             </p>
         </div>
         <div class="screen">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/bancomat-tkinter/screenAccessoNegato.PNG">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/bancomat-tkinter/screenTkinterMenu.PNG">
+            <span>
+                <img width="48%" src="{{ site.baseurl }}/img/progetti/bancomat-tkinter/screenAccessoNegato.PNG">
+                <img width="50%" src="{{ site.baseurl }}/img/progetti/bancomat-tkinter/screenTkinterMenu.PNG">
+            </span>
         </div>
     </div>
 </div>
@@ -53,8 +55,10 @@ link: https://github.com/EnMa85/Esercizi_Python/blob/main/es09_Tkinter_Bancomat_
             </p>
         </div>
         <div class="screen">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/bancomat-tkinter/screenImporto.PNG">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/bancomat-tkinter/screenEffettuata.PNG">
+            <span>
+                <img width="49%" src="{{ site.baseurl }}/img/progetti/bancomat-tkinter/screenImporto.PNG">
+                <img width="48%" src="{{ site.baseurl }}/img/progetti/bancomat-tkinter/screenEffettuata.PNG">
+            </span>
             <img class="screen-max" src="{{ site.baseurl }}/img/progetti/bancomat-tkinter/codeBancoDef.PNG">
         </div>
     </div>
@@ -84,8 +88,8 @@ link: https://github.com/EnMa85/Esercizi_Python/blob/main/es09_Tkinter_Bancomat_
 <div class="section">
     <div class="project card">
         <span>
-            <img class="screen-min" src="{{ site.baseurl }}/img/progetti/bancomat-tkinter/screenMovimenti.PNG">
-            <img width="65%" src="{{ site.baseurl }}/img/progetti/bancomat-tkinter/screenTkinterGrafici.PNG">
+            <img width="26.5%" src="{{ site.baseurl }}/img/progetti/bancomat-tkinter/screenMovimenti.PNG">
+            <img width="69.5%" src="{{ site.baseurl }}/img/progetti/bancomat-tkinter/screenTkinterGrafici.PNG">
         </span>
     </div>
 </div>
