--- a/progetti/python/concessionaria.html
+++ b/progetti/python/concessionaria.html
@@ -15,8 +15,10 @@ link: https://github.com/EnMa85/Esercizi_Python/blob/main/es13_MySQL_Concessiona
             </p>
         </div>
         <div class="screen">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/concessionaria/auto1.PNG">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/concessionaria/auto2.PNG">
+            <span>
+                <img width="49%" src="{{ site.baseurl }}/img/progetti/concessionaria/auto1.PNG">
+                <img width="49%" src="{{ site.baseurl }}/img/progetti/concessionaria/auto2.PNG">
+            </span>
         </div>
     </div>
 </div>
@@ -55,8 +57,10 @@ link: https://github.com/EnMa85/Esercizi_Python/blob/main/es13_MySQL_Concessiona
             </p>
         </div>
         <div class="screen">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/concessionaria/auto5.PNG">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/concessionaria/auto6.PNG">
+            <span>
+                <img width="53%" src="{{ site.baseurl }}/img/progetti/concessionaria/auto5.PNG">
+                <img width="45%" src="{{ site.baseurl }}/img/progetti/concessionaria/auto6.PNG">
+            </span>
         </div>
     </div>
 </div>
@@ -97,8 +101,10 @@ link: https://github.com/EnMa85/Esercizi_Python/blob/main/es13_MySQL_Concessiona
             </p>
         </div>
         <div class="screen">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/concessionaria/auto7.PNG">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/concessionaria/auto9.PNG">
+            <span>
+                <img width="52%" src="{{ site.baseurl }}/img/progetti/concessionaria/auto7.PNG">
+                <img width="46%" src="{{ site.baseurl }}/img/progetti/concessionaria/auto9.PNG">
+            </span>
             <img class="screen-max" src="{{ site.baseurl }}/img/progetti/concessionaria/auto13.PNG">
         </div>
     </div>
@@ -134,8 +140,10 @@ link: https://github.com/EnMa85/Esercizi_Python/blob/main/es13_MySQL_Concessiona
             </p>
         </div>
         <div class="screen">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/concessionaria/auto14.PNG">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/concessionaria/auto22.PNG">
+            <span>
+                <img width="49%" src="{{ site.baseurl }}/img/progetti/concessionaria/auto14.PNG">
+                <img width="49%" src="{{ site.baseurl }}/img/progetti/concessionaria/auto22.PNG">
+            </span>
             <img class="screen-max" src="{{ site.baseurl }}/img/progetti/concessionaria/auto8.PNG">
         </div>
     </div>
