--- a/progetti/python/distributore-tkinter.html
+++ b/progetti/python/distributore-tkinter.html
@@ -1,6 +1,6 @@
 ---
 layout: project_base
-title: Distributore GUI Tkinter
+title: Distributore Tkinter
 link: https://github.com/EnMa85/Esercizi_Python/blob/main/es07_Tkinter_Distributore
 ---
 
@@ -17,8 +17,10 @@ link: https://github.com/EnMa85/Esercizi_Python/blob/main/es07_Tkinter_Distribut
             </p>
         </div>
         <div class="screen">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/distributore-tkinter/screenDistributore.PNG">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/distributore-tkinter/screenBevande.PNG">
+            <span>
+                <img width="49%" src="{{ site.baseurl }}/img/progetti/distributore-tkinter/screenDistributore.PNG">
+                <img width="49%" src="{{ site.baseurl }}/img/progetti/distributore-tkinter/screenBevande.PNG">
+            </span>
         </div>
     </div>
 </div>
@@ -54,8 +56,10 @@ link: https://github.com/EnMa85/Esercizi_Python/blob/main/es07_Tkinter_Distribut
             </p>
         </div>
         <div class="screen">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/distributore-tkinter/screenErogazione.PNG">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/distributore-tkinter/screenAccessoNegato.PNG">
+            <span>
+                <img width="49%" src="{{ site.baseurl }}/img/progetti/distributore-tkinter/screenAccessoNegato.PNG">
+                <img width="49%" src="{{ site.baseurl }}/img/progetti/distributore-tkinter/screenErogazione.PNG">
+            </span>
         </div>
     </div>
 </div>
