--- a/progetti/python/ristorante.html
+++ b/progetti/python/ristorante.html
@@ -36,8 +36,10 @@ link: https://github.com/EnMa85/Esercizi_Python/tree/main/es14_Flask_Ristorante
             </p>
         </div>
         <div class="screen">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/ristorante/codeSelect.PNG">
-            <img class="screen-med" width="" src="{{ site.baseurl }}/img/progetti/ristorante/codeOrdina.PNG">
+            <span>
+                <img width="49%" src="{{ site.baseurl }}/img/progetti/ristorante/codeSelect.PNG">
+                <img width="49%" width="" src="{{ site.baseurl }}/img/progetti/ristorante/codeOrdina.PNG">
+            </span>
         </div>
     </div>
 </div>
@@ -56,8 +58,10 @@ link: https://github.com/EnMa85/Esercizi_Python/tree/main/es14_Flask_Ristorante
             </p>
         </div>
         <div class="screen">
-            <img class="screen-medmin" src="{{ site.baseurl }}/img/progetti/ristorante/screenOrdini.PNG">
-            <img class="screen-medmax" src="{{ site.baseurl }}/img/progetti/ristorante/codeAccetta.PNG">
+            <span>
+                <img width="35%" src="{{ site.baseurl }}/img/progetti/ristorante/screenOrdini.PNG">
+                <img width="63%" src="{{ site.baseurl }}/img/progetti/ristorante/codeAccetta.PNG">
+            </span>
         </div>
     </div>
 </div>
