--- a/progetti/python/magazzino.html
+++ b/progetti/python/magazzino.html
@@ -15,8 +15,10 @@ link: https://github.com/EnMa85/Esercizi_Python/blob/main/Esercitazione_Talentfo
             </p>
         </div>
         <div class="screen">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/magazzino/login.PNG">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/magazzino/index.PNG">
+            <span>
+                <img width="45%" src="{{ site.baseurl }}/img/progetti/magazzino/login.PNG">
+                <img width="51%" src="{{ site.baseurl }}/img/progetti/magazzino/index.PNG">
+            </span>
         </div>
     </div>
 </div>
@@ -48,8 +50,10 @@ link: https://github.com/EnMa85/Esercizi_Python/blob/main/Esercitazione_Talentfo
             </p>
         </div>
         <div class="screen">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/magazzino/lista_prodotti.PNG">
-            <img class="screen-med" src="{{ site.baseurl }}/img/progetti/magazzino/code2.PNG">
+            <span>
+                <img width="48.5%" src="{{ site.baseurl }}/img/progetti/magazzino/code2.PNG">
+                <img width="49%" src="{{ site.baseurl }}/img/progetti/magazzino/lista_prodotti.PNG">
+            </span>
         </div>
     </div>
 </div>
