--- a/progetti/python/immobiliare.html
+++ b/progetti/python/immobiliare.html
@@ -33,7 +33,7 @@ link: https://github.com/EnMa85/Esercizi_Python/tree/main/es16_Flask_AgenziaImmo
             </p>
         </div>
         <div class="screen">
-            <img class="screen-medmin" src="{{ site.baseurl }}/img/progetti/immobiliare/agScreen3.PNG">
+            <img class="screen-min" src="{{ site.baseurl }}/img/progetti/immobiliare/agScreen3.PNG">
             <img class="screen-max" src="{{ site.baseurl }}/img/progetti/immobiliare/agCod6.PNG">
         </div>
     </div>
@@ -72,7 +72,7 @@ link: https://github.com/EnMa85/Esercizi_Python/tree/main/es16_Flask_AgenziaImmo
             </p>
         </div>
         <div class="screen">
-            <img class="screen-medmin" src="{{ site.baseurl }}/img/progetti/immobiliare/agScreen2.PNG">
+            <img class="screen-min" src="{{ site.baseurl }}/img/progetti/immobiliare/agScreen2.PNG">
             <img class="screen-max" src="{{ site.baseurl }}/img/progetti/immobiliare/agCod4.PNG">
         </div>
     </div>
