Fixes carousel script

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@ title: Portfolio Progetti
         <div class="flexVert">
             <div class="last-proj">
                 <div class="flexOr">
-                    <button onclick="prevSlide()" id="prevButton">
+                    <button onclick="prevSlide()" class="prevButton">
                         <img class="arrow" src="{{ site.baseurl }}/img/fr-sx.PNG" alt="Precedente">
                     </button>
                     <img src="{{ site.baseurl }}/img/card-progetti/home_bilanci.PNG" alt="anteprima pagina progetto">
-                    <button onclick="nextSlide()" id="nextButton">
+                    <button onclick="nextSlide()" class="nextButton">
                         <img class="arrow" src="{{ site.baseurl }}/img/fr-dx.PNG" alt="Successivo">
                     </button>
                 </div>
@@ -53,11 +53,11 @@ title: Portfolio Progetti
 
             <div class="last-proj">
                 <div class="flexOr">
-                    <button onclick="prevSlide()" id="prevButton">
+                    <button onclick="prevSlide()" class="prevButton">
                        <img class="arrow" src="{{ site.baseurl }}/img/fr-sx.PNG" alt="Precedente">
                     </button>
                     <img src="{{ site.baseurl }}/img/card-progetti/home_registro.PNG" alt="anteprima pagina progetto">
-                    <button onclick="nextSlide()" id="nextButton">
+                    <button onclick="nextSlide()" class="nextButton">
                        <img class="arrow" src="{{ site.baseurl }}/img/fr-dx.PNG" alt="Successivo">
                     </button>
                 </div>
