--- a/progetti/java/supermercatoJava.html
+++ b/progetti/java/supermercatoJava.html
@@ -68,9 +68,9 @@ link: https://github.com/EnMa85/Esercizi_Java/tree/main/WebSupermercato
                 accessi non abilitati (Servet Sessione e filtro XML).
                 <br><br>
                 Nell'area riservata utente viene stampata la lista dei prodotti disponibli, ognuno con la propria check box e 
-                la casella per la quantità richiesta. 
+                la casella per la quantità da ordinare. 
                 <br>
-                Già nella jsp viene impedito di settare una quantità negativa o superiore 
+                Nella jsp viene impedito di settare una quantità negativa o superiore 
                 alla disponibilità di magazzino.
             </p>
         </div>
@@ -168,6 +168,19 @@ link: https://github.com/EnMa85/Esercizi_Java/tree/main/WebSupermercato
         </div>
         <div class="screen">
             <img class="screen-max" src="{{ site.baseurl }}/img/progetti/supermercatoJava/aggiornaprezzo.PNG">
+        </div>
+    </div>
+</div>
+
+<div class="section">
+    <div class="project card">
+        <div class="par">
+            <p>
+                Al logout viene chiamata la servlet che distrugge la sessione e reindirizza ad index.
+            </p>
+        </div>
+        <div class="screen">
+            <img class="screen-max" src="{{ site.baseurl }}/img/progetti/supermercatoJava/logout.PNG">
         </div>
     </div>
 </div>
