Added java project Autosalone

--- a/linguaggi/java.html
+++ b/linguaggi/java.html
@@ -9,7 +9,7 @@ title: Progetti Java
             <img src="{{ site.baseurl }}/img/loghi/logoJava.PNG" alt="logo Java">
         </div>
         <p>
-            Raccolta di progetti Java suddivisi per tipologia di applicazione.
+            Raccolta di progetti full stack sviluppati in Java.
             <br><br>
             Le GUI utilizzano il framework Swing, mentre le WebApp sono implementate
             con le Servlet oppure con il framework Spring Boot.
