--- a/linguaggi/python.html
+++ b/linguaggi/python.html
@@ -9,8 +9,8 @@ title: Progetti Python
             <img src="{{ site.baseurl }}/img/loghi/logoPython.PNG" alt="logo Python">
         </div>
         <p>
-            Raccolta di progetti Python suddivisi per tipologia di applicazione.
-
+            Raccolta di progetti full stack sviluppati in Python.
+            <br><br>
             I progetti GUI sono implementati utilizzando il framework Tkinter, mentre le WebApp utilizzano Flask. 
         </p>
     </div>
