--- a/linguaggi/java.html
+++ b/linguaggi/java.html
@@ -21,7 +21,7 @@ title: Progetti Java
     <div class="flexOr">     
         {% for card in site.data.java.cards1 %}
             {% 
-                include card_base.html 
+                include card-base.html
                 title = card.title 
                 image = card.image
                 content = card.content
@@ -36,7 +36,7 @@ title: Progetti Java
     <div class="flexOr">
         {% for card in site.data.java.cards2 %}
         {% 
-            include card_base.html 
+            include card-base.html
             title = card.title 
             image = card.image
             content = card.content
@@ -51,7 +51,7 @@ title: Progetti Java
     <div class="flexOr">
         {% for card in site.data.java.cards3 %}
         {% 
-            include card_base.html 
+            include card-base.html 
             title = card.title 
             image = card.image
             content = card.content
