--- a/linguaggi/python.html
+++ b/linguaggi/python.html
@@ -20,7 +20,7 @@ title: Progetti Python
     <div class="flexOr">     
         {% for card in site.data.python.cards1 %}
             {% 
-                include card_base.html 
+                include card-base.html 
                 title = card.title 
                 image = card.image
                 content = card.content
@@ -35,7 +35,7 @@ title: Progetti Python
     <div class="flexOr">
         {% for card in site.data.python.cards2 %}
         {% 
-            include card_base.html 
+            include card-base.html 
             title = card.title 
             image = card.image
             content = card.content
@@ -50,7 +50,7 @@ title: Progetti Python
     <div class="flexOr">
         {% for card in site.data.python.cards3 %}
         {% 
-            include card_base.html 
+            include card-base.html
             title = card.title 
             image = card.image
             content = card.content
