--- a/progetti/java/autosalone.html
+++ b/progetti/java/autosalone.html
@@ -22,7 +22,7 @@ link: https://github.com/EnMa85/Esercizi_Java/tree/main/SpringAutovetture
                 Il progetto è implementato con Spring boot ed è strutturato secondo uno scherma Model View Controller.
                 <br><br>
                 Utilizza Gradle per la compilazione, MySql per il database, Thymeleaf per le view 
-                e XChart per la creazione di grafici.
+                e XChart per la creazione di grafici nel back-end.
                 <br><br><br>
                 Nella pagina iniziale viene visualizzato un carosello con le auto disponibili, implementato con Javascript.
             </p>
