--- a/progetti/java/autosalone.html
+++ b/progetti/java/autosalone.html
@@ -19,7 +19,7 @@ link: https://github.com/EnMa85/Esercizi_Java/tree/main/SpringAutovetture
     <div class="project card">
         <div class="par">
             <p>
-                Il progetto è implementato con Spring boot ed è strutturato secondo uno scherma Model View Controller.
+                Il progetto è implementato con Spring boot ed è strutturato secondo uno schema Model View Controller.
                 <br><br>
                 Utilizza Gradle per la compilazione, MySql per il database, Thymeleaf per le view 
                 e XChart per la creazione di grafici nel back-end.
@@ -135,8 +135,8 @@ link: https://github.com/EnMa85/Esercizi_Java/tree/main/SpringAutovetture
     <div class="project card">
         <div class="par">
             <p>
-                La view visualizzerà il grafico con il nome corrispondente a quello dell'indirizzo impostato 
-                nel href del bottone.
+                La view visualizzerà il grafico con il nome corrispondente a quello concatenato nell'indirizzo 
+                href del bottone.
                 <br><br>
                 Ogni volta che si torna all'area statistiche iniziale, i grafici verranno rigenerati.
             </p>
